--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     -->
     <title>DStorage</title>
   </head>
-  <body>
+  <body style="background-color:#262626;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
